--- a/views/a.html
+++ b/views/a.html
@@ -14,12 +14,18 @@
 </head>
 
 <body class="half_life">
-    <section class="cover">
-        <div class="cover_left">
-            
+    <div class="wrapper">
+        <div class="content">
+            <section class="cover">
+                <div class="cover_left cover_item">
+
+                </div>
+                <div class="cover_right cover_item"></div>
+            </section>
         </div>
-        <div class="cover_right"></div>
-    </section>
+
+    </div>
+
 </body>
 
 </html>
