--- a/public/css/a.css
+++ b/public/css/a.css
@@ -4,13 +4,28 @@ body {
     height: 100%;
     background: #000;
 }
-
-.cover{
+.wrapper{
     height: 100%;
 }
+.content{
+    max-width:10rem;
+    margin: 0 auto;
+    height: 100%;
+}
+.cover{
+    height: 100%;
+    display: flex;
+    
+}
 .cover .cover_left {
-    width: 50%;
+    flex: 1;
     height:100%;
     background: url("/static/img/cover_lbg.jpg");
+    background-size:cover; 
+}
+.cover .cover_right {
+    flex: 1;
+    height:100%;
+    background: url("/static/img/cover_rbg.jpg");
     background-size:cover; 
 }
