--- a/views/a.html
+++ b/views/a.html
@@ -17,15 +17,32 @@
     <div class="wrapper">
         <div class="content">
             <section class="cover">
-                <div class="cover_left cover_item">
-1
+                <div class="cover_box">
+                    <div class="cover_left cover_item">
+                        <img src="/static/img/cl_h1.png" alt="" class="cl_h1">
+                        <img src="/static/img/cl_tv.png" alt="" class="cl_tv">
+                    </div>
+                    <div class="cover_right cover_item">
+                        <img src="/static/img/cr_h1.png" alt="" class="cr_h1">
+                        <img src="/static/img/cr_text.png" alt="" class="cr_text">
+                        <img src="/static/img/cr_phone.png" alt="" class="cr_phone">
+                    </div>
                 </div>
-                <div class="cover_right cover_item"></div>
+                <img src="/static/img/open_btn.png" alt="startBtn" class="start">
+                <img src="/static/img/ctouch.svg" alt="" class="ctouch">
             </section>
         </div>
-
     </div>
-
+    <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
+    <script src="/static/js/shoushi.js"></script>
+    <script>
+        /* 点击开始按钮 */
+        new AlloyFinger($(".start")[0], {
+            singleTap: function () {
+                alert(1);
+            }
+        });
+    </script>
 </body>
 
 </html>
