--- a/public/css/a.css
+++ b/public/css/a.css
@@ -1,8 +1,18 @@
+.hid{
+    display: none;
+}
+.por{
+    position: relative;
+}
+.poa{
+    position: absolute;
+}
 html,
 body {
     overflow: hidden;
     height: 100%;
     background: #000;
+    font-size: 12px;
 }
 .wrapper{
     height: 100%;
@@ -15,6 +25,7 @@ body {
 .cover{
     position: relative;
     height: 100%;
+    z-index: 1000
 }
 .cover_box{
     height: 100%;
@@ -35,6 +46,7 @@ body {
     background-size:cover; 
 }
 .start{
+    z-index: 99;
     position: absolute;
     left: 50%;
     bottom:.5625rem;
@@ -82,4 +94,50 @@ body {
     top:50%;
     margin-top: -4rem;
     width: 2.78125rem;
+}
+
+.mode{
+    position: absolute;
+    left: 0;
+    top:0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background: url("/static/img/page_bg2.jpg") no-repeat 0 0;
+    background-size:cover; 
+    text-align: center;
+}
+.text1{
+    margin-top: 1rem;
+    width: 7.90625rem;
+}
+.text2{
+    margin-top: 2.2rem;
+    width: 3.640625rem;
+}
+.single_mode{
+    width: 3.015625rem;
+}
+.double_mode{
+    width: 5rem;
+}
+.cue{
+    margin-top: 1rem;
+    color:#677d8b;
+}
+.qrcode{
+    height: 100%;
+    background: url("/static/img/dpa_bg.jpg") no-repeat 0 0;
+    background-size: cover;
+    text-align: center;
+}
+.text_a1{
+    margin-top: 1.5rem;
+    width: 5.109375rem;
+}
+
+#qrcode img{
+    margin-top: 1rem;
+    display: inline-block !important;
+    width: 4.53125rem;
 }
