--- a/views/b.html
+++ b/views/b.html
@@ -17,10 +17,20 @@
     <div class="double_player">
         <div class="wrapper">
             <section class="join">
-                
+
             </section>
         </div>
     </div>
+    <script>
+        var socket = io.connect();
+        socket.on("connect",function(){
+            socket.emit("playbJoin");
+            socket.on("phoneEnough",function(){
+                alert("该链接已经配对成功了");
+                window.location.href="http://localhost:2018/"
+            });
+        });
+    </script>
 </body>
 
 </html>
