--- a/public/css/a.css
+++ b/public/css/a.css
@@ -1,12 +1,15 @@
-.hid{
+.hid {
     display: none;
 }
-.por{
+
+.por {
     position: relative;
 }
-.poa{
+
+.poa {
     position: absolute;
 }
+
 html,
 body {
     overflow: hidden;
@@ -14,46 +17,54 @@ body {
     background: #000;
     font-size: 12px;
 }
-.wrapper{
+
+.wrapper {
     height: 100%;
 }
-.content{
-    max-width:10rem;
+
+.content {
+    max-width: 10rem;
     margin: 0 auto;
     height: 100%;
 }
-.cover{
+
+.cover {
     position: relative;
     height: 100%;
     z-index: 1000
 }
-.cover_box{
+
+.cover_box {
     height: 100%;
     display: flex;
 }
+
 .cover .cover_left {
     position: relative;
     flex: 1;
-    height:100%;
+    height: 100%;
     background: url("/static/img/cover_lbg.jpg");
-    background-size:cover; 
+    background-size: cover;
 }
+
 .cover .cover_right {
     position: relative;
     flex: 1;
-    height:100%;
+    height: 100%;
     background: url("/static/img/cover_rbg.jpg");
-    background-size:cover; 
+    background-size: cover;
 }
-.start{
+
+.start {
     z-index: 99;
     position: absolute;
     left: 50%;
-    bottom:.5625rem;
+    bottom: .5625rem;
     width: 1.5rem;
     margin-left: -.75rem;
 }
-.ctouch{
+
+.ctouch {
     position: absolute;
     bottom: .09375rem;
     left: 50%;
@@ -61,83 +72,136 @@ body {
     width: 2.5rem;
     height: 2.5rem;
 }
-.cl_h1{
+
+.cl_h1 {
     position: absolute;
     right: 0;
-    top:50%;
+    top: 50%;
     width: 2.046875rem;
-    margin-top:-7rem;
+    margin-top: -7rem;
 }
-.cl_tv{
+
+.cl_tv {
     position: absolute;
     left: 0;
-    top:50%;
+    top: 50%;
     width: 2.6875rem;
-    margin-top:-3rem;
+    margin-top: -3rem;
 }
-.cr_h1{
+
+.cr_h1 {
     position: absolute;
     left: 0;
-    top:50%;
+    top: 50%;
     width: 1.03125rem;
-    margin-top:-6.734375rem;
+    margin-top: -6.734375rem;
 }
-.cr_text{
+
+.cr_text {
     position: absolute;
     left: 1.25rem;
-    top:2rem;
+    top: 2rem;
     width: 2.265625rem;
 }
-.cr_phone{
+
+.cr_phone {
     position: absolute;
     right: 0;
-    top:50%;
+    top: 50%;
     margin-top: -4rem;
     width: 2.78125rem;
 }
 
-.mode{
+.mode {
     position: absolute;
     left: 0;
-    top:0;
+    top: 0;
     z-index: 100;
     width: 100%;
     height: 100%;
     background: url("/static/img/page_bg2.jpg") no-repeat 0 0;
-    background-size:cover; 
+    background-size: cover;
     text-align: center;
 }
-.text1{
+
+.text1 {
     margin-top: 1rem;
     width: 7.90625rem;
 }
-.text2{
+
+.text2 {
     margin-top: 2.2rem;
     width: 3.640625rem;
 }
-.single_mode{
+
+.single_mode {
     width: 3.015625rem;
 }
-.double_mode{
+
+.double_mode {
     width: 5rem;
 }
-.cue{
+
+.cue {
     margin-top: 1rem;
-    color:#677d8b;
+    color: #677d8b;
 }
-.qrcode{
+
+.qrcode {
     height: 100%;
     background: url("/static/img/dpa_bg.jpg") no-repeat 0 0;
     background-size: cover;
     text-align: center;
 }
-.text_a1{
+
+.text_a1 {
     margin-top: 1.5rem;
     width: 5.109375rem;
 }
 
-#qrcode img{
+#qrcode img {
     margin-top: 1rem;
     display: inline-block !important;
     width: 4.53125rem;
+}
+
+.seek {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url("/static/img/dpa_bg.jpg") no-repeat 0 0;
+    background-size: cover;
+}
+
+.text_a3 {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -2.5625rem;
+    width: 5.125rem;
+    margin-top: -3rem;
+}
+
+.waiting_playerb {
+    position: absolute;
+    top:50%;
+    margin-top:-1.5rem; 
+    left:50%;
+    margin-left: -1.5625rem;
+}
+
+.waiting_playerb li {
+    float: left;
+    margin-right: .625rem;
+    width: .3125rem;
+    height: .3125rem;
+    background: url("/static/img/dot.png") no-repeat 0 0;
+    background-size: cover;
+}
+
+.waiting_playerb li.last {
+    margin-right: 0;
+}
+.waiting_playerb li.current {
+    background: url("/static/img/dot.png") no-repeat -.3125rem 0;
 }
