--- a/public/css/b.css
+++ b/public/css/b.css
@@ -20,4 +20,56 @@ body {
 
 .double_player {
     height: 100%;
+    /*  background: url("/static/img/dpa_bg.jpg") no-repeat 0 0;
+    background-size: cover; */
+}
+
+.wrapper {
+    height: 100%;
+}
+
+.join {
+    height: 100%;
+    background: url("/static/img/dpa_bg.jpg") no-repeat 0 0;
+    background-size: cover;
+    text-align: center;
+}
+
+.text_b1 {
+    margin-top: 1rem;
+    width: 7.390625rem;
+}
+
+.join_btn {
+    margin-top: 1rem;
+    width: 4.6875rem;
+}
+
+.hand {
+    width: 2.59375rem;
+    animation: handmove 2s ease-in-out infinite;
+}
+
+@keyframes handmove {
+    0% {
+        margin-top: -1rem;
+    }
+    100% {
+        margin-top: 0rem;
+    }
+}
+
+.waiting {
+    position: relative;
+    height: 100%;
+    background: url("/static/img/dpa_bg.jpg") no-repeat 0 0;
+    background-size: cover;
+}
+.waiting_img{
+    position: absolute;
+    left:50%;
+    top:50%;
+    margin-left: -2.34375rem;
+    margin-top: -2.34375rem;
+    width: 4.6875rem;
 }
