--- a/public/css/a.css
+++ b/public/css/a.css
@@ -184,9 +184,9 @@ body {
 
 .waiting_playerb {
     position: absolute;
-    top:50%;
-    margin-top:-1.5rem; 
-    left:50%;
+    top: 50%;
+    margin-top: -1.5rem;
+    left: 50%;
     margin-left: -1.5625rem;
 }
 
@@ -202,6 +202,7 @@ body {
 .waiting_playerb li.last {
     margin-right: 0;
 }
+
 .waiting_playerb li.current {
     background-position-x: -.3125rem;
 }
@@ -235,4 +236,46 @@ body {
     100% {
         margin-top: 0rem;
     }
+}
+
+.vloading {
+    position: relative;
+    height: 100%;
+    background: url("/static/img/dpa_bg3.jpg") no-repeat 0 0;
+    background-size: cover;
+}
+
+.moon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: 2.8125rem;
+    margin-top: 3.984375rem;
+    width: 1rem;
+}
+
+.loading_progress {
+    position: absolute;
+    left: 0;
+    bottom: 1.71875rem;
+    width: 100%;
+    height: .140625rem;
+    border-bottom: 1px solid #517286;
+}
+
+.bar {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: .15625rem;
+    background: #696aff;
+}
+
+.video{
+    width: 100%;
+    height:100%;
+}
+#past_video{
+    width: 100%;
 }
