1月15号早上提交

--- a/views/a.html
+++ b/views/a.html
@@ -72,7 +72,7 @@
             </section>
             <!-- 视频 -->
             <section class="video">
-                <video preload="auto" x-webkit-airplay="true" webkit-playsinline="true" id="past_video">
+                <video preload="auto" x-webkit-airplay="true" webkit-playsinline="true" id="past_video" autoplay>
                     <source src="/static/video/a.mp4" type="video/mp4"/>
                 </video>
             </section>
