--- a/views/a.html
+++ b/views/a.html
@@ -16,7 +16,7 @@
 <body class="half_life">
     <div class="wrapper">
         <div class="content por">
-            <section class="cover hid">
+            <section class="cover">
                 <div class="cover_box">
                     <div class="cover_left cover_item">
                         <img src="/static/img/cl_h1.png" alt="" class="cl_h1">
@@ -31,7 +31,7 @@
                 <img src="/static/img/open_btn.png" alt="startBtn" class="open">
                 <img src="/static/img/ctouch.svg" alt="" class="ctouch">
             </section>
-            <section class="mode hid">
+            <section class="mode">
                 <img src="/static/img/text1.png" alt="" class="text1">
                 <br>
                 <img src="/static/img/text2.png" alt="" class="text2">
@@ -41,12 +41,12 @@
                 </div>
                 <p class="cue">* 请在wifi条件下阅读，请打开手机音效</p>
             </section>
-            <section class="qrcode hid">
+            <section class="qrcode">
                 <img src="/static/img/text_a1.png" alt="" class="text_a1">
                 <div id="qrcode"></div>
             </section>
             <!-- 正在寻找 -->
-            <section class="seek hid">
+            <section class="seek">
                 <img src="/static/img/text_a3.png" alt="" class="text_a3">
                 <ul class="waiting_playerb">
                     <li class="current"></li>
@@ -56,7 +56,7 @@
                 </ul>
             </section>
             <!-- playerb 加入-->
-            <section class="join hid">
+            <section class="join">
                 <img src="/static/img/text_a4.png" alt="" class="text_a4">
                 <br>
                 <img src="/static/img/start_btn.png" alt="" class="start_btn">
@@ -64,16 +64,20 @@
                 <img src="/static/img/hand.png" alt="" class="hand">
             </section>
             <!-- 视频加载 -->
-            <section class="vloading hid">
+            <section class="vloading">
                 <img src="/static/img/moon.png" alt="" class="moon">
                 <div class="loading_progress">
                     <div class="bar"></div>
                 </div>
             </section>
+            <!-- 播放页面 -->
+            <section class="play_page">
+                <img src="/static/img/play_btn.png" alt="" class="play_btn">
+            </section>
             <!-- 视频 -->
             <section class="video">
-                <video preload="auto" x-webkit-airplay="true" webkit-playsinline="true" id="past_video" autoplay>
-                    <source src="/static/video/a.mp4" type="video/mp4"/>
+                <video preload="auto" x-webkit-airplay="true" webkit-playsinline="true" id="past_video">
+                    <source src="/static/video/a.mp4" type="video/mp4" />
                 </video>
             </section>
         </div>
@@ -92,6 +96,12 @@
             }
             return num;
         }
+        /* 监听视频文件的加载 */
+        var flag = false;
+        $("video")[0].addEventListener("canplaythrough", function () {
+            flag = true;
+            console.log(flag);
+        });
         /* 点击开始按钮 */
         new AlloyFinger($(".open")[0], {
             singleTap: function () {
@@ -144,11 +154,28 @@
                     console.log("用户B点击了加入按钮");
                     $(".seek").hide();
                 });
+                socket.on("play", function () {
+                    $(".vloading").hide();
+                });
                 new AlloyFinger($(".start_btn")[0], {
                     singleTap: function () {
                         console.log(socket);
                         $(".join").hide();
                         socket.emit("playaClickStart");
+                        $(".bar").width("100%");
+                        $(".bar")[0].addEventListener("webkitTransitionEnd", function () {
+                            socket.emit("playaBarEnd");
+                        });
+                    }
+                });
+                new AlloyFinger($(".play_btn")[0], {
+                    singleTap: function () {
+                        if (flag) {
+                            $(".play_page").hide();
+                            $("video")[0].play();
+                        }else{
+                            alert("视频未加载完成");
+                        }
                     }
                 });
                 socket.on("reconnect", function () {
