--- a/public/css/a.css
+++ b/public/css/a.css
@@ -264,20 +264,38 @@ body {
 }
 
 .bar {
-    width: 100%;
+    width: 0;
     position: absolute;
     top: 0;
     left: 0;
     height: .15625rem;
     background: #696aff;
+    transition: width 5s;
 }
 
-.video{
-    width: 100%;
-    height:100%;
-}
-#past_video{
+.video {
     width: 100%;
     height: 100%;
-    object-fit:fill;
+}
+
+#past_video {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+
+.play_page {
+    position: relative;
+    height: 100%;
+    background: url("/static/img/dpa_bg.jpg") no-repeat 0 0;
+    background-size: cover;
+}
+
+.play_btn {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -2.734375rem;
+    margin-top: -2.734375rem;
+    width: 5.46875rem;
 }
