--- a/public/css/b.css
+++ b/public/css/b.css
@@ -65,11 +65,83 @@ body {
     background: url("/static/img/dpa_bg.jpg") no-repeat 0 0;
     background-size: cover;
 }
-.waiting_img{
+
+.waiting_img {
     position: absolute;
-    left:50%;
-    top:50%;
+    left: 50%;
+    top: 50%;
     margin-left: -2.34375rem;
     margin-top: -2.34375rem;
     width: 4.6875rem;
+}
+
+.vloading {
+    position: relative;
+    height: 100%;
+    background: url("/static/img/dpb_bg.jpg") no-repeat 0 0;
+    background-size: cover;
+}
+
+.loading_progress {
+    position: absolute;
+    left: 0;
+    bottom: 1.71875rem;
+    width: 100%;
+    height: .140625rem;
+    border-bottom: 1px solid #517286;
+}
+
+.bar {
+    width: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: .15625rem;
+    background: #696aff;
+    transition: width 5s;
+}
+
+.moon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: 2.8125rem;
+    margin-top: 3.984375rem;
+    width: 1rem;
+}
+
+.video {
+    width: 100%;
+    height: 100%;
+}
+
+#past_video {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+
+.play_page {
+    position: relative;
+    height: 100%;
+    background: url("/static/img/dpa_bg.jpg") no-repeat 0 0;
+    background-size: cover;
+}
+
+.play_btn {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -2.734375rem;
+    margin-top: -2.734375rem;
+    width: 5.46875rem;
+}
+.dp_back{
+    width: 100%;
+    height: 100%;
+    background: url("/static/img/dp_back_bg.jpg")no-repeat 0 0;
+    background-size: cover;
+}
+.text_back{
+    width: 7.09375rem;
 }
