--- a/public/css/a.css
+++ b/public/css/a.css
@@ -299,3 +299,19 @@ body {
     margin-top: -2.734375rem;
     width: 5.46875rem;
 }
+.dp_back {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url("/static/img/dp_back_bg.jpg")no-repeat 0 0;
+    background-size: cover;
+}
+
+.text_back {
+    position: absolute;
+    width: 7.09375rem;
+    left: 50%;
+    top: 50%;
+    margin-left: -3.546875rem;
+    margin-top: -5.625rem;
+}
